--- a/static/css/watertip_style.css
+++ b/static/css/watertip_style.css
@@ -10,7 +10,7 @@ body {
     zoom: 95%;
     height: 100%;
     width: 100%;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Arial', sans-serif;
     background-color: #e0f7fa;
     overflow-x: hidden;
     overflow-y:auto;
