--- a/static/css/projects_style.css
+++ b/static/css/projects_style.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Arial', sans-serif;
   background-color: #f0f4f8;
   margin: 0;
   height: 100vh;
