--- a/static/css/signup_style.css
+++ b/static/css/signup_style.css
@@ -17,7 +17,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Arial', sans-serif;
   color: #333;
 }
 /* Form container styling */
