--- a/static/css/technologies_style.css
+++ b/static/css/technologies_style.css
@@ -3,14 +3,64 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+  }
+
+  /* Full-screen layout */
+  html, body {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    zoom: 95%;
+  }
+
+  body {
+    font-family: 'Arial', sans-serif;
+    background-image: url('https://static.vecteezy.com/system/resources/thumbnails/022/408/423/small/creative-generative-ai-illustration-of-water-on-earth-globe-with-green-trees-photo.jpg'); /* Simple background image */
+    background-size: cover;
+    background-position: center;
+    color: #333;
+    line-height: 1.6;
+  }
+
+  .navbar {
+    background-color: #00796b; /* Albastru închis */
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-body {
-    font-family: 'Arial', sans-serif;
-    background: linear-gradient(to bottom, #b7e4c7, #40916c);
-    color: #081c15;
+.navbar ul {
+    list-style: none;
+    width: 100%;
+    padding: 0;
     margin: 0;
-    padding: 20px;
+    list-style-type: none;
+    overflow: hidden;
+}
+
+.navbar li {
+    margin-right: 20px;
+    float: left;
+}
+
+.navbar a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+.navbar a:hover {
+    background-color: #002244; /* Un albastru și mai închis pentru hover */
+}
+
+/* Stilizarea pentru elementele din dreapta */
+.navbar li.login {
+        
+    float: right;
 }
 
 /* Titlu principal */
@@ -24,6 +74,18 @@ h1 {
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.7);
     display: inline-block;
+}
+
+.go-back-projects {
+    text-align: center;
+}
+
+.go-back-projects p {
+    color: white;
+}
+
+.go-back-projects a {
+    color: #f59127;
 }
 
 /* Container pentru slide-uri */
@@ -91,7 +153,8 @@ form label {
 }
 
 form input,
-form textarea {
+form textarea,
+form select {
     width: 100%;
     padding: 12px;
     margin-bottom: 15px;
