--- a/templates/company.html
+++ b/templates/company.html
@@ -7,8 +7,7 @@
   
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-  <link rel="stylesheet" href="{% static 'css/company.css' %}">
-  <script  type="text/javascript" src="{% static 'js/company.js' %}"></script>
+  <link rel="stylesheet" href="{% static 'css/company_style.css' %}">
   <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}" >
 </head>
 
@@ -21,7 +20,6 @@
       <li><a href="/about/">About</a></li>
       <li><a href="/watertips/">Water Tips</a></li>
       <li><a href="/projects/">Projects</a></li>
-       <li><a href="/technologies/">Projects</a></li>
       {% if user.is_authenticated %}
         <li class="login"><a href="/logout/">Log out</a></li>
         <li class="login"><a href="/profile/">{{ user.username }}</a></li>
@@ -34,35 +32,35 @@
 
     <!-- Formular de înregistrare -->
     <div class="form-card">
-        <form id="companyForm">
+        <form id="companyForm" action="/submit_company/" method="post">
+          {% csrf_token %}
             <div class="form-group">
                 <label for="companyName"><i class="fas fa-building"></i> Company Name</label>
-                <input type="text" id="companyName" placeholder="Enter your company name" required>
-            </div>
-
-            <div class="form-group">
-                <label for="username"><i class="fas fa-user"></i> Username</label>
-                <input type="text" id="username" placeholder="Choose a username" required>
+                <input type="text" id="name" name="name" placeholder="Enter your company name" required>
             </div>
 
             <div class="form-group">
                 <label for="country"><i class="fas fa-globe"></i> Country</label>
-                <select id="country" required>
-                    <option value="">Select your country</option>
-                    <option value="USA">United States</option>
-                    <option value="UK">United Kingdom</option>
-                    <option value="Germany">Germany</option>
-                    <option value="France">France</option>
-                    <option value="Romania">Romania</option>
+                <select id="country" name="country" required>
+                  <option value="">Select your country</option>
+                  {% if countries %}
+                    {% for country in countries %}
+                      <option value="{{ country.name }}">{{ country.name }}</option>
+                    {% endfor %}
+                  {% endif %}
                 </select>
             </div>
 
             <div class="form-group">
                 <label for="location"><i class="fas fa-map-marker-alt"></i> Location</label>
-                <input type="text" id="location" placeholder="Enter your location" required>
+                <input type="text" id="location" name="location" placeholder="Enter your location" required>
             </div>
 
             <button type="submit" id="registerButton">Register</button>
+            <div class="go-back-projects">
+              <p>Continue registering your project!</p>
+              <p>Click <a href="/projects/">here</a> to go back.</p>
+            </div>
         </form>
     </div>
 
