--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="{% static 'js/map-imports/mapdata.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/map-imports/worldmap.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/homepage.js' %}"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- remove -->
     <title>Homepage - Water Conservation</title>
 </head>
 
