--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -23,6 +23,7 @@
             <li><a href="/about/">About</a></li>
             <li><a href="/watertips/">Water Tips</a></li>
             <li><a href="/projects/">Projects</a></li>
+            <li><a href="/feedback/">Feedback</a></li>
             {% if user.is_authenticated %}
                 <li class="login"><a href="/logout/">Log out</a></li>
                 <li class="login"><a href="/profile/">{{ user.username }}</a></li>
